<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EnglishDict</string>
    <string name="menu_quit">Exit</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="default_rating">0</string>
    <string name="en_text">En</string>
    <string name="ru_text">Ru</string>
    <string name="russian_name">russian</string>
    <string name="english_name">english</string>
    <string name="russian_name_multiple">russian</string>
    <string name="english_name_multiple">english</string>
    <string name="wrong_letters_language_text">Please use only %s letters</string>
    <string name="edit_word_text">Edit a word</string>
    <string name="enter_word_text">Enter a word</string>
    <string name="save_text">Save</string>
    <string name="add_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="processing_translate_text">Processing…</string>
    <string name="lang_text">En/Ru</string>
    <string name="reset">Reset</string>
    <string name="sort">Sort</string>
    <string name="search_hint">Search word</string>
    <string name="words_add">Add word</string>
    <string name="translate_enter">Enter a translated word</string>
    <string name="speak">Speak</string>
    <string name="image_content_description">Search</string>
    <string name="sound_content_description">Sound</string>
    <string name="dict_text">Dictionary</string>
    <string name="training_text">Training</string>
    <string name="choice_variant">Choice variant</string>
    <string name="translate_select_words">Select words</string>
    <string name="translate_no_chosen_words">No words was chosen</string>
    <string name="translate_no_found_words">No words was found</string>
    <string name="translate_chose_all_words">Choose all</string>
    <string name="speech_support">Your device doesn\'t support Speech to Text</string>
    <string name="translateClientId">polymetr</string>
    <string name="translateClientKey">RxaztEaI7bGU8rusQfgw1AC0tWwsHfCqkTytW6y/AB8=</string>
    <string name="order_name">Name</string>
    <string name="order_rating">Rating</string>
    <string name="settings_title">Application settings</string>
    <string name="settings_summary">Settings for EnglishDict application</string>
    <string name="pronunciation_category_name">Pronunciation settings</string>
    <string name="pronunciation_checkbox_title">Pronounce words</string>
    <string name="pronunciation_checkbox_summary">Pronounce english words when the activity is slided</string>
    <string name="training_category_name">Training settings</string>
    <string name="training_words_number_title">Words per a training</string>
    <string name="training_words_number_summary">How much words will be proposed for the training</string>
    <string name="training_words_count">%s in the base</string>
    <string name="training_result_text">Right %1$s from %2$s</string>
    <string name="training_once_more">Continue</string>
    <string name="training_stop">Exit</string>
</resources>
