<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pronunciation_category_name">
        <CheckBoxPreference
            android:key="PLAY_SOUND_ON_SLIDE"
            android:title="@string/pronunciation_checkbox_title"
            android:summary="@string/pronunciation_checkbox_summary"
            android:defaultValue="true"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/training_category_name">
        <EditTextPreference
            android:key="TRAINING_WORDS_COUNT"
            android:title="@string/training_words_number_title"
            android:summary="@string/training_words_number_summary"
            android:defaultValue="@integer/default_training_words_number"
            android:numeric="integer"
            android:maxLength="2"
            />
    </PreferenceCategory>
</PreferenceScreen>