<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/abs_main_menu">
    <item
        android:id="@+id/menu_search"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/search_hint"
        />
    <item
        android:id="@+id/menu_reload"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/reset"
        android:showAsAction="always"
        android:visible="false"
        />
    <item
        android:id="@+id/menu_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/sort"
        android:showAsAction="always">
        <menu>
            <group android:id="@+id/group_rating" android:checkableBehavior="none">
                <item
                    android:id="@+id/order_word"
                    android:icon="@android:drawable/arrow_down_float"
                    android:title="@string/order_name"
                    android:showAsAction="never"
                    />
                <item
                    android:id="@+id/order_rating"
                    android:icon="@android:drawable/arrow_down_float"
                    android:title="@string/order_rating"
                    android:showAsAction="never"
                    />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_lang"
        android:icon="@drawable/abs__ic_menu_moreoverflow_normal_holo_dark"
        android:title="@string/lang_text"
        android:showAsAction="always">
        <menu>
            <group android:id="@+id/group_lang" android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_en"
                    android:icon="@drawable/ic_usa"
                    android:title="@string/en_text"
                    android:showAsAction="never"
                    />
                <item
                    android:id="@+id/menu_ru"
                    android:icon="@drawable/ic_russian"
                    android:title="@string/ru_text"
                    android:showAsAction="never"
                    />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_add"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/menu_training"
        android:icon="@drawable/ic_training"
        android:title="@string/training_text"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_settings"
        android:showAsAction="never"
        />
</menu>
