<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/abs_main_menu">
    <item
        android:id="@+id/menu_detail_sound"
        android:actionLayout="@layout/abs_menu_item_sound"
        android:showAsAction="always"
        />
    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_add"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/menu_training"
        android:icon="@drawable/ic_training"
        android:title="@string/training_text"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_settings"
        android:showAsAction="never"
        />
</menu>
